tests/snapshots/file@base@inheritance@inherit_from_number.lox.snap
---
source: tests/common/mod.rs
description: "var Number = 123;\nclass Foo < Number {} // expect runtime error: Superclass must be a class.\n"
input_file: crafting_interpreters_test_files/inheritance/inherit_from_number.lox
---
OUT: 

===
ERR: 
  × superclass must be a class
   ╭─[2:13]
 1 │ var Number = 123;
 2 │ class Foo < Number {} // expect runtime error: Superclass must be a class.
   ·             ───┬──
   ·                ╰── here
   ╰────
