tests/snapshots/file@base@method@extra_arguments.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {\n  method(a, b) {\n    print a;\n    print b;\n  }\n}\n\nFoo().method(1, 2, 3, 4); // expect runtime error: Expected 2 arguments but got 4.\n"
input_file: crafting_interpreters_test_files/method/extra_arguments.lox
---
OUT: 

===
ERR: 
  × wrong number of arguments, expected 2, got 4
